# T3Triangulation

./: CMakeLists.txt  main.cxx
src/Core/: Core.cxx  Core.hxx
src/Types/: types.h
